# backgammon

./: LICENSE  README.md  example.py  pyproject.toml
backgammon/: __init__.py  backgammon.py  dice.py  game.py  player.py  turn.py
tests/: test_game.py
