[tool.poetry]
name = "backgammon"
version = "0.1.0"
description = ""
authors = ["Dean Malmgren <dean.malmgren@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
nose2 = "^0.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
